--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<script type="text/javascript" src="/app.js"></script>
 </head>
 <body>
-	<!-- <h1>Hello</h1> -->
-	1+1 = {{1+1}}
+	<p>new</p>
+	<div ng-app="MyApp">
+		<div>1+1 = {{1+1}}</div>
+	</div>
+	
 </body>
 </html>
