getting home page ready

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js" type="text/javascript" charset="utf-8" async defer></script>
   </head>
+
   <body>
-    <div>1 + 1 = {{1 + 1}}</div>
 
-    <div>Your Home page should have a text input (for URL), select/dropdown (containing HTTP methods) and a "Fetch" button all centered on the page. The user should be able to select an HTTP Method from the dropdown. Clicking the "Fetch" button will make an AJAX call to the specified URL. Your drop-down element should contain/allow for the user to use the **GET**, **POST**, **OPTIONS** and **HEAD** HTTP methods.</div>
-
+    <div class="row">
+      <div class="col-sm-12">
+        <div>1 + 1 = {{1 + 1}}</div>
+      </div>
+      <div class="col-sm-12">
+        <div>Your Home page should have a text input (for URL), select/dropdown (containing HTTP methods) and a "Fetch" button all centered on the page. The user should be able to select an HTTP Method from the dropdown. Clicking the "Fetch" button will make an AJAX call to the specified URL. Your drop-down element should contain/allow for the user to use the **GET**, **POST**, **OPTIONS** and **HEAD** HTTP methods.</div>
+      </div>
+    </div>
 
 <!-- JS files -->
   <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
@@ -18,18 +24,6 @@
   <script src="lib/node_modules/angular/angular.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="lib/node_modules/angular-route/angular-route.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="/javascripts/app.js"></script>
-  <!--   <script type="text/javascript" src="/javascripts/AppConstants.js"></script> -->
-  <!-- <script type="text/javascript" src="/javascripts/AppConfig.js"></script> -->
-
-<!-- FACTORIES -->
-  <!--   <script src="/javascripts/factories/AuthFactory.js" type="text/javascript" charset="utf-8" async defer></script> -->
-
-<!-- DIRECTIVES -->
-  <!--   <script src="/javascripts/directives/fileread.js" type="text/javascript" charset="utf-8" async defer></script> -->
-
-<!-- CONTROLLERS -->
-  <!--   <script src="/javascripts/controllers/ServiceAddCtrl.js" type="text/javascript" charset="utf-8" async defer></script> -->
-
 
   </body>
 </html>
