trying to make angular work

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-  <html>
-  <head>
-    <title>OMG</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js" type="text/javascript" charset="utf-8" async defer></script>
-  </head>
+<html>
+<head>
+  <title>OMG</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles/main.css">
+</head>
 
-  <body>
+<body>
 
-    <div class="row">
-      <div class="col-sm-12">
-        <div>1 + 1 = {{1 + 1}}</div>
-      </div>
-      <div class="col-sm-12">
-        <div>Your Home page should have a text input (for URL), select/dropdown (containing HTTP methods) and a "Fetch" button all centered on the page. The user should be able to select an HTTP Method from the dropdown. Clicking the "Fetch" button will make an AJAX call to the specified URL. Your drop-down element should contain/allow for the user to use the **GET**, **POST**, **OPTIONS** and **HEAD** HTTP methods.</div>
-      </div>
+  <div class="row top">
+    <div class="col-sm-12">
+      <div class="text-center top">1 + 1 = {{1 + 1}}</div>
     </div>
+    <div class="col-sm-12 top">
+      <div class="text-center">Your Home page should have a text input (for URL), select/dropdown (containing HTTP methods) and a "Fetch" button all centered on the page. The user should be able to select an HTTP Method from the dropdown. Clicking the "Fetch" button will make an AJAX call to the specified URL. Your drop-down element should contain/allow for the user to use the **GET**, **POST**, **OPTIONS** and **HEAD** HTTP methods.</div>
+    </div>
+  </div>
 
 <!-- JS files -->
-  <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="lib/node_modules/angular/angular.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="lib/node_modules/angular-route/angular-route.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="/javascripts/app.js"></script>
+<script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="lib/node_modules/angular/angular.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="lib/node_modules/angular-route/angular-route.min.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript" src="/javascripts/app.js"></script>
 
-  </body>
+</body>
 </html>
