--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OMG</title>
+  <title>FETCH</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
-<body>
-
-  <div class="row top">
-    <div class="col-sm-12">
-      <h4 class="text-center top">
-        Testing Angular
-      </h4>
-      <div class="text-center top">
-        1 + 1 = {{1 + 1}}
-      </div>
-    </div>
-  </div>
-
+<body ng-app="myApp">
 
   <div class="container top">
     <div class="row">
-
+      <div>
+        <h4 class="text-center top">
+          FETCH FOUNDATIONS
+        </h4>
+      </div>
       <div class="form-group row">
         <div class="col-sm-6">
           <label for="example-text-input" class="col-xs-6 col-form-label">Enter a URL</label>
@@ -47,6 +39,14 @@
         <div class="col-sm-12">
           <button type="submit" class="btn btn-primary"><p>FETCH</p></button>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container top">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        ---> "results of the 'fetch' button display here" <---
       </div>
     </div>
   </div>
