--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
-<body ng-controller="Default">
+<body ng-controller="MainController">
 
   <div class="container top">
     <div class="row">
