--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head >
 	<title>OMG</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 </head>
-<body ng-app="myApp">
-1 + 1 = {{1 + 1}}
+<body ng-app="myApp" ng-controller="MainController">
+	<input type="text" ng-model="url">
+	<button ng-click="fetch()">Click me!</button>
+	<ul>
+		<li ng-repeat="response in responses">
+			{{response.statusCode}}
+		</li>
+	</ul>
 
 <script src="/app.js"></script>
 </body>
