--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="fetchApp">
 <head>
 	<meta charset="utf-8">
-	<title>OMG</title>
+	<title>OMG app</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
 </head>
 
-<body ng-app="myApp">
-1+1 = {{1+1}}
-<script src="app.js"></script>
+<body ng-controller="MainController">
+{{message}}
+	<div class="sixteen columns">
+		<div class="four columns offset-by-four">
+			<input type="text" name="URL" ng-model="url">
+			<select>
+				<option value='POST' >POST</option>
+				<option value='GET' >GET</option>
+				<option value='PUT' >PUT</option>
+			</select>
+			<button ng-click="fetch()">Fetch</button>
+			<ul>
+				<li ng-repeat="response in responses">
+					{{response.statusCode}}
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<script src="app.js"></script>
 </body>
 </html>
