--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="fetchApp">
   <head>
     <meta charset="UTF-8">
     <title>OMG</title>
@@ -7,8 +7,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="/app.js"></script>
   </head>
-  <body>
-    1 + 1 = {{ 1 + 1 }}
-    2 + 2 = {{ 5 }}
+  <body ng-controller="MainController">
+    <input type="text" ng-model="url">
+    <button ng-click="fetch()">Click Me!</button>
+    <ul>
+      <li ng-repeat="response in responses">
+        {{ response.statusCode }}
+      </li>
+    </ul>
   </body>
 </html>
