--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="/app.js"></script>
+    <script src="/mainController.js"></script>
+    <script src="/requestService.js"></script>
+    <script src="/responseFactory.js"></script>
   </head>
   <body ng-controller="MainController">
     <input type="text" ng-model="url">
