break apart services controller and factories

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
 	</div>
 
 	<script src="app.js"></script>
+
+	<script src="/mainController.js"></script>
+    <script src="/requestService.js"></script>
+    <script src="/responseFactory.js"></script>	
 </body>
 </html>
