--- a/index.html
+++ b/index.html
@@ -6,27 +6,38 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 	<script type="text/javascript" src="/app.js"></script>
+	<script type="text/javascript" src="/requestService.js"></script>
 	<script type="text/javascript" src="/controllers/MainController.js"></script>
 	<script type="text/javascript" src="/factories/requestFactory.js"></script>
 </head>
 <body ng-controller="MainController">
 
+<div class="row">
 	<div class="sixteen columns">
 		<div class="six columns offset-by-three">
 			<input type="text" ng-model="url">
-			<button ng-click="fetch()">Click Me!</button>
+			<button ng-click="fetch()">Fetch!</button>
 			<select name="select">
 			    <option value="GET">GET</option> 
 			    <option value="POST" selected>POST</option>
-			    <option value="PATCH">PATCH</option>
+			    <option value="OPTIONS">OPTIONS</option>
+			    <option value="HEAD">HEAD</option>
 			</select>
 			<ul>
 				<li ng-repeat="response in responses">
 					{{response.statusCode}}
 				</li>
+				<li ng-repeat="response in responses">
+					{{response.methodName}}
+				</li>
+				<li ng-repeat="response in responses">
+					{{response.urlName}}
+				</li>
 			</ul>
+			
 		</div>
 	</div>
+</div>	
 
 </body>
 </html>
