--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="fetchApp">
-  <head>
+
+<head>
     <meta charset="UTF-8">
-    <title>OMG</title>
+    <title>fetchApp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="/app.js"></script>
     <script src="/mainController.js"></script>
     <script src="/requestService.js"></script>
     <script src="/responseFactory.js"></script>
-  </head>
-  <body ng-controller="MainController">
-    <input type="text" ng-model="url">
-    <button ng-click="fetch()">Click Me!</button>
-    <ul>
-      <li ng-repeat="response in responses">
-        {{ response.statusCode }}
-      </li>
-    </ul>
-  </body>
+</head>
+
+<body ng-controller="MainController">
+    <div>
+        <input type="text" ng-model="url">
+        <button ng-click="fetch()">Click Me!</button>
+        <div>
+            <select ng-model="method">
+                <option ng-repeat="method in methods" value="{{method}}">{{method}}</option>
+            </select>
+        </div>
+        <ul>
+            <li ng-repeat="response in responses">
+                {{ response.statusCode }} | {{response.url}}
+            </li>
+        </ul>
+    </div>
+
+</body>
+
 </html>
