--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <ul>
             <li ng-repeat="response in responses">
-                {{ response.statusCode }} | {{response.url}}
+                {{ response.statusCode }} | {{response_time}}
             </li>
         </ul>
     </div>
