--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <ul>
             <li ng-repeat="response in responses">
-                {{ response.statusCode }} | {{response_time}}
+                Status Code: {{ response.statusCode }} | Response Time: {{response.response_time}} | Content Length:
             </li>
         </ul>
     </div>
