--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="fetchApp">
 <head>
 	<meta charset="UTF-8">
-	<title>OMG</title>
+	<title>Fetch Exercise</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 	<script type="text/javascript" src="/app.js"></script>
@@ -15,26 +15,29 @@
 <div class="row">
 	<div class="sixteen columns">
 		<div class="six columns offset-by-three">
-			<input type="text" ng-model="url">
-			<button ng-click="fetch()">Fetch!</button>
-			<select name="select">
-			    <option value="GET">GET</option> 
-			    <option value="POST" selected>POST</option>
-			    <option value="OPTIONS">OPTIONS</option>
-			    <option value="HEAD">HEAD</option>
-			</select>
-			<ul>
-				<li ng-repeat="response in responses">
-					{{response.statusCode}}
-				</li>
-				<li ng-repeat="response in responses">
-					{{response.methodName}}
-				</li>
-				<li ng-repeat="response in responses">
-					{{response.urlName}}
-				</li>
-			</ul>
-			
+			<div>
+				<input type="text" ng-model="url">
+				<button ng-click="fetch()">Fetch!</button>
+				<select name="select" ng-model="method">
+				    <option value="GET" selected>GET</option> 
+				    <option value="POST">POST</option>
+				    <option value="OPTIONS">OPTIONS</option>
+				    <option value="HEAD">HEAD</option>
+				</select>
+				<ul ng-repeat="response in responses"> <!-- | filter:{isPOST:false} -->
+					<div>Call:</div>
+					<li >Status Code: {{response.statusCode}}</li>
+					<li>Method Name: {{response.methodName}}</li>
+					<li>URL Name: {{response.urlName}}</li>
+					<li>Elapsed Time (in seconds): {{logTime}}</li>
+				</ul>
+				<!-- <ul ng-repeat="response in responses | filter:{isPOST:true}">
+					<li >Status Code: {{response.statusCode}}</li>
+					<li>Method Name: {{response.methodName}}</li>
+					<li>URL Name: {{response.urlName}}</li>
+					<li>{{logTime}}</li>
+				</ul> -->
+			</div>			
 		</div>
 	</div>
 </div>	
