--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					{{response.methodName}}				
 					{{response.urlName}}				
 					{{response.size}}
+					{{response.bites}}
 				</li>
 			</ul>
 		</div>
