--- a/index.html
+++ b/index.html
@@ -19,24 +19,19 @@
 				<input type="text" ng-model="url">
 				<button ng-click="fetch()">Fetch!</button>
 				<select name="select" ng-model="method">
-				    <option value="GET" selected>GET</option> 
+					<option value="" selected>Selection</option>
+				    <option value="GET">GET</option> 
 				    <option value="POST">POST</option>
 				    <option value="OPTIONS">OPTIONS</option>
 				    <option value="HEAD">HEAD</option>
 				</select>
-				<ul ng-repeat="response in responses"> <!-- | filter:{isPOST:false} -->
+				<ul ng-repeat="response in responses"> 
 					<div>Call:</div>
 					<li >Status Code: {{response.statusCode}}</li>
 					<li>Method Name: {{response.methodName}}</li>
 					<li>URL Name: {{response.urlName}}</li>
 					<li>Elapsed Time (in seconds): {{logTime}}</li>
 				</ul>
-				<!-- <ul ng-repeat="response in responses | filter:{isPOST:true}">
-					<li >Status Code: {{response.statusCode}}</li>
-					<li>Method Name: {{response.methodName}}</li>
-					<li>URL Name: {{response.urlName}}</li>
-					<li>{{logTime}}</li>
-				</ul> -->
 			</div>			
 		</div>
 	</div>
