hidden form showing

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         <button ng-click="fetch()">Fetch, rover!!</button>
       </div>
     </div>
-    <div ng-show="selected">
-      <input>
+    <div class="one column offset-by-three" ng-show="selected(pickOne)">
+    <form>
+      <input type="text">
+    </form>
     </div>
   </div>
 
