--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class='six columns offset-by-three'>
       <input type="text" ng-model="url">
       <button ng-click="fetch()">Fetch!</button>
-      <select name="select" ng-model="testicles" ng-change="test()">
+      <select name="select" ng-model="methods">
         <option value="GET">GET</option>
         <option value="POST">POST</option>
         <option value="OPTIONS">OPTIONS</option>
@@ -28,17 +28,26 @@
         <input></input>
         <button ng-click="fetch()">Submit</button>
       </div>
-  <ul>
-    <li ng-repeat="response in responses">
-      {{response.statusCode}}
-    </li>
-    <li ng-repeat="response in responses">
-      {{response.methodName}}
-    </li>
-    <li ng-repeat="response in responses">
-      {{response.urlName}}
-    </li>
-  </ul>
+        <table ng-show="!userposting">
+          <thead>
+            <tr>
+              <th>Status Code</th>
+              <th>URL</th>
+              <th>HTTP Method</th>
+              <th>Response Time</th>
+              <th>Content Size</th>
+            </tr>
+          </thead>
+            <tbody>
+            <tr ng-repeat="response in responses">
+              <td>{{response.statusCode}}</td>
+              <td>{{response.urlName}}</td>
+              <td>{{response.methodName}}</td>
+              <td>{{response.responseTime}}{{"ms"}}</td>
+              <td>{{response.size}}</td>
+            </tr>
+            </tbody>
+        </table>
       </div>
     </div>
   </div>
